# local_streaming_pipeline

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  docker-compose.demo.yml  docker-compose.yml  producer.py  pyproject.toml  requirements.txt  run.sh  run_demo.sh
docs/: CLICKHOUSE_README.md  CRYPTO_STOCK_DASHBOARD.md  FLINK_README.md  KAFKA_README.md  PYSPARK_README.md  SPARK_STREAMING_README.md
src/consumer/: flink_clickhouse_consumer.py  spark_clickhouse_consumer.py  spark_consumer.py
src/dashboard/: app.py  web_app.py
src/dashboard/static/: crypto_index.html  index.html
src/demo/: Dockerfile  Dockerfile.spark-consumer-demo  Dockerfile.spark-demo  spark_consumer_demo.py
src/producer/: Dockerfile  crypto_producer.py  producer.py  stock_producer.py
src/production/consumer/: Dockerfile.flink-consumer  Dockerfile.spark-consumer  flink_clickhouse_consumer.py  spark_microbatch_clickhouse_consumer.py  spark_streaming_clickhouse_consumer.py
src/production/dashboard/: Dockerfile  Dockerfile.web-dashboard  app.py  web_app.py
src/production/dashboard/static/: stock_index.html
src/production/producer/: Dockerfile  crypto_producer.py
